Amarok ChangeLog
================
(C) 2002-2013 the Amarok authors.


VERSION 2.9-Beta 1
  FEATURES:

  CHANGES:

  BUGFIXES:
   * Using Shuffle keyboard shortcut no longer causes Amarok to crash.
     (BR 323614)


VERSION 2.8
  FEATURES:
   * Tracks from Recently Played List widget can now directly be added to the
     playlist. (BR 279263, BR 296090)

  CHANGES:
   * The Jamendo service now uses a higher quality MP3 format instead of Ogg Vorbis.
   * Added an option whether adding tracks to playlist should start playing. (BR 322428)
   * Amarok now depends on Qt 4.8.3.
   * Amarok now uses FindFFMpeg.cmake from kdelibs

  BUGFIXES:
   * Don't reload Wikipedia applet content if artist/album have not changed. 
     Patch by Frank Meerkoetter <frank@meerkoetter.org>. (BR 112044)
   * Jamendo service: Albums are now downloaded directly instead of going via
     BitTorrent. This is far more reliable and also supports on-the-fly transcoding.
     (BR 299434)
   * Work-around Solid UDisks2 backend bug that caused USB Mass Storage devices and iPods
     not being recognized when connected before Amarok was started. Also fixes a bug where
     blank devices would appear in Play Media dialog. (BR 322980)
   * Definitely fix a bug where storing Last.fm credentials in plain-text isn't offered
     when KWallet is disabled. (BR 315306)
   * Radio streams from scripted services are now instantly playable. (BR 320718)
   * Recently Played List widget now keeps its own time for tracks instead of relying on
     the Last Played statistic. (BR 302485)
   * Prevent hitting an assertion failure if just removed track from the Local Collection
     is edited. (BR 322474)
   * Fixed a regression introduced in 2.8 Beta where tracks in the Local Collection were
     sometimes forgotten and then found again. (BR 322603)
   * Fixed invalid SQL queries when you have files or folders with an apostrophe in
     your collection. (BR 322415)