@@ -707,8 +707,10 @@ MainWindow::slotSeekBackwardLong()
 
 void MainWindow::slotPutCurrentTrackToClipboard()
 {
+    QClipboard* const clipboard = QApplication::clipboard();
     Meta::TrackPtr currentTrack = The::engineController()->currentTrack();
-    if ( currentTrack )
+
+    if ( currentTrack && !clipboard->ownsSelection() )
     {
         QString text;
         Meta::ArtistPtr artist = currentTrack->artist();
@@ -716,7 +718,6 @@ void MainWindow::slotPutCurrentTrackToClipboard()
             text = artist->prettyName() + " - ";
         text += currentTrack->prettyName();
 
-        QClipboard *clipboard = QApplication::clipboard();
         clipboard->setText( text );
     }
 }
